tests/valid/54394_semicolon_assignment/semicolon_assignment.agu
-- Author: 54394, Afonso Esteves

let _ : Int =
    let y : Int = 4;
    while y < 10 do (
        set y = y + 4
    );
    y

