tests/invalid-syntax/54394_wrong_modulus_usage/wrong_modulus_usage.agu
-- Author: 54394, Afonso Esteves

let func (s, v) : (String, Int) -> Int =
    s % v

